--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/boat.tscn", "res://scenes/impact_zone.tscn", "res://scenes/enemy.tscn", "res://scenes/water.tscn", "res://scenes/marker.tscn")
-current_scene="res://scenes/marker.tscn"
+current_scene="res://scenes/enemy.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scripts/enemy.gd", "res://scripts/main_scene.gd"]
-selected_script="res://scripts/main_scene.gd"
-open_help=[]
+selected_script="res://scripts/enemy.gd"
+open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
 
