--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 46,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -17,15 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 12.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 19,
-"selection_to_column": 0,
-"selection_to_line": 27,
+"row": 31,
+"scroll_position": 13.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
