change camera angle

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,12 +32,12 @@ current_scene="res://scenes/enemy.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/enemy.gd", "res://scripts/main_scene.gd"]
-selected_script="res://scripts/enemy.gd"
+open_scripts=["res://scripts/Enemy Spawner.gd", "res://scripts/enemy.gd", "res://scripts/main_scene.gd"]
+selected_script="res://scripts/Enemy Spawner.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
