--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/boat.tscn", "res://scenes/impact_zone.tscn", "res://scenes/enemy.tscn", "res://scenes/water.tscn", "res://scenes/marker.tscn")
-current_scene="res://scenes/enemy.tscn"
+current_scene="res://scenes/main_scene.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/Enemy Spawner.gd", "res://scripts/enemy.gd", "res://scripts/main_scene.gd"]
-selected_script="res://scripts/Enemy Spawner.gd"
+selected_script="res://scripts/enemy.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
