--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -36,6 +36,11 @@ StandardMaterial3D:uv1_scale=true
 StandardMaterial3D:uv2_scale=true
 DirectionalLight3D:scale=true
 CSGSphere3D:scale=true
+HSlider:scale=true
+CanvasLayer:scale=true
+Control:scale=true
+VBoxContainer:scale=true
+TextEdit:scale=true
 
 [dialog_bounds]
 
