--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Area3D",
+"class": &"Enemy",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/enemy.gd"
+}, {
 "base": &"Node3D",
 "class": &"Stowaway",
 "icon": "",
