--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -12,38 +12,38 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=513
+dock_hsplit_3=-216
 dock_hsplit_4=0
-dock_filesystem_split=0
-dock_filesystem_display_mode=0
+dock_filesystem_split=186
+dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/boat.tscn", "res://scenes/impact_zone.tscn", "res://scenes/enemy.tscn", "res://scenes/water.tscn", "res://scenes/marker.tscn")
-current_scene="res://scenes/enemy.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/boat.tscn", "res://scenes/enemy.tscn", "res://scenes/impact_zone.tscn", "res://scenes/enemy_spawner.tscn")
+current_scene="res://scenes/main_scene.tscn"
+center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Enemy Spawner.gd", "res://scripts/enemy.gd", "res://scripts/main_scene.gd"]
-selected_script="res://scripts/Enemy Spawner.gd"
-open_help=["Node"]
-script_split_offset=140
+open_scripts=["res://scripts/boat.gd", "res://scripts/Enemy Spawner.gd", "res://scripts/enemy.gd", "res://scripts/EnemyBoundry.gd", "res://scripts/impact_zone.gd", "res://scripts/main_scene.gd", "res://scripts/signal_bus.gd"]
+selected_script="res://scripts/boat.gd"
+open_help=["Area3D", "Basis", "CharacterBody3D", "Node", "Node3D", "PhysicsBody3D", "RayCast3D", "RemoteTransform3D", "StaticBody3D", "Transform3D", "Vector3"]
+script_split_offset=150
 list_split_offset=0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://shaders/windwaker_water.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://shaders/windwaker_water.gdshader"
