--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,7 +1,13 @@
 list=Array[Dictionary]([{
-"base": &"Node3D",
-"class": &"Stowaway",
+"base": &"Area3D",
+"class": &"Enemy",
 "icon": "",
 "language": &"GDScript",
-"path": "res://stowaway.gd"
+"path": "res://scripts/enemy.gd"
+}, {
+"base": &"Node3D",
+"class": &"ImpactZone",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/impact_zone.gd"
 }])
