--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,22 +13,22 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=513
-dock_hsplit_3=-216
+dock_hsplit_3=-432
 dock_hsplit_4=0
-dock_filesystem_split=186
-dock_filesystem_display_mode=2
+dock_filesystem_split=197
+dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/enemy.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/boat.tscn", "res://scenes/impact_zone.tscn", "res://scenes/enemy.tscn", "res://scenes/water.tscn", "res://scenes/marker.tscn")
-current_scene="res://scenes/main_scene.tscn"
+open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/enemy.tscn", "res://scenes/impact_zone.tscn")
+current_scene="res://scenes/enemy.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Enemy Spawner.gd", "res://scripts/enemy.gd", "res://scripts/main_scene.gd"]
+open_scripts=["res://scripts/boat.gd", "res://scripts/Enemy Spawner.gd", "res://scripts/enemy.gd", "res://scripts/EnemyBoundry.gd", "res://scripts/impact_zone.gd", "res://scripts/main_scene.gd"]
 selected_script="res://scripts/enemy.gd"
 open_help=["Node"]
 script_split_offset=140
