--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,6 +6,12 @@ list=Array[Dictionary]([{
 "path": "res://scripts/enemy.gd"
 }, {
 "base": &"Node3D",
+"class": &"EnemySpawner",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/Enemy Spawner.gd"
+}, {
+"base": &"Node3D",
 "class": &"ImpactZone",
 "icon": "",
 "language": &"GDScript",
