--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -16,4 +16,16 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://scripts/impact_zone.gd"
+}, {
+"base": &"Camera3D",
+"class": &"MainCamera",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/Camera.gd"
+}, {
+"base": &"Node3D",
+"class": &"SpawnerManager",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/Spawner Manager.gd"
 }])
