--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=447
-dock_hsplit_3=-254
+dock_hsplit_2=208
+dock_hsplit_3=-385
 dock_hsplit_4=0
-dock_filesystem_split=186
+dock_filesystem_split=0
 dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,23 +27,23 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/boat.tscn", "res://scenes/impact_zone.tscn", "res://scenes/enemy.tscn", "res://scenes/enemy_spawner.tscn")
-current_scene="res://scenes/enemy.tscn"
+open_scenes=PackedStringArray("res://scenes/main_scene.tscn", "res://scenes/boat.tscn", "res://scenes/impact_zone.tscn", "res://scenes/enemy.tscn", "res://scenes/enemy_spawner.tscn", "res://scenes/boat_skeleton.tscn")
+current_scene="res://scenes/main_scene.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/boat.gd", "res://scripts/Enemy Spawner.gd", "res://scripts/enemy.gd", "res://scripts/EnemyBoundry.gd", "res://scripts/impact_zone.gd", "res://scripts/main_scene.gd", "res://scripts/signal_bus.gd", "res://scripts/Spawner Manager.gd"]
-selected_script="res://scripts/enemy.gd"
+open_scripts=["res://scripts/boat.gd", "res://scripts/Camera.gd", "res://scripts/Enemy Spawner.gd", "res://scripts/enemy.gd", "res://scripts/EnemyBoundry.gd", "res://scripts/impact_zone.gd", "res://scripts/main_scene.gd", "res://scripts/signal_bus.gd", "res://scripts/Spawner Manager.gd"]
+selected_script="res://scripts/main_scene.gd"
 open_help=["@GlobalScope", "Area3D", "Basis", "CharacterBody3D", "Marker3D", "Node", "Node3D", "PackedScene", "PhysicsBody3D", "RayCast3D", "RemoteTransform3D", "StaticBody3D", "Transform3D", "Vector3"]
 script_split_offset=150
 list_split_offset=0
 
 [ShaderEditor]
 
-open_shaders=["res://shaders/windwaker_water.gdshader"]
+open_shaders=["res://shaders/windwaker_water.gdshader", "res://shaders/sky.gdshader"]
 split_offset=0
 selected_shader="res://shaders/windwaker_water.gdshader"
