--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -176,7 +176,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/index.html"
+export_path="export4/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -199,7 +199,7 @@ progressive_web_app/enabled=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=0
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
+progressive_web_app/icon_144x144="res://logo.png"
+progressive_web_app/icon_180x180="res://logo.png"
+progressive_web_app/icon_512x512="res://logo.png"
 progressive_web_app/background_color=Color(0, 0, 0, 1)
